Fixed incorrect ideal perimeter bug, about to work on random motion

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 __pycache__/
 vertex_model_beta.mp4
 vertex_model_working.mp4
+vertex_model_working_ts01.mp4
+vertex_model_working_ts001.mp4
+sample_videos/
